# bd-crossword

./: .gitignore  README.md  bd_crossword.db  pyproject.toml
src/bd_crossword/: todo.md
src/bd_crossword/common/: bd_request.py  crossword_clues.py  crossword_grid.py  crossword_index.py  grid.py  index_entry.py
src/bd_crossword/entry_page/: console.py  entry_page_fill_grid.py  entry_page_fix_up.py  entry_page_getter.py  entry_page_parser.py
src/bd_crossword/html_page/: console.py  html_page_generator.py
src/bd_crossword/index_page/: bd_request.py  console.py  index_downloader.py  index_page_getter.py  index_page_parser.py
tests/common/: test_crossword_index.py  test_grid.py
tests/entry_page/: test_all_have_clues.py  test_console.py  test_entry_page_fill_grid.py  test_entry_page_fix_up.py  test_entry_page_parser.py
tests/html_page/: test_console.py  test_html_page_console.py  test_html_page_generator.py
tests/index_page/: test_bd_request.py  test_console.py  test_index_downloader.py  test_index_page_getter.py  test_index_page_parser.py
tests/index_page/data/: test01.html
tests/index_page/test_data_files/: dump_2017-08-07_no_space_in_title.html  dump_2017-08-07_no_space_in_title.index  dump_2017-11-27_one_star_diff.html  dump_2017-11-27_one_star_diff.index  dump_2018-09-10_no_diff.html  dump_2018-09-10_no_diff.index  dump_2018-10-01_hints_tips.html  dump_2018-10-01_hints_tips.index  dump_2019-05-06_no_diff.html  dump_2019-05-06_no_diff.index  dump_2019-07-08_miffypops_returns.html  dump_2019-07-08_miffypops_returns.index  dump_2019-12-30_DT-29246.html  dump_2019-12-30_DT-29246.index  dump_2021-02-17_extra_solution.html  dump_2021-02-17_extra_solution.index  dump_2021-02-25_no_star_rating.html  dump_2021-02-25_no_star_rating.index  dump_2021-05-27_multiple_spaces_after_difficulty.html  dump_2021-05-27_multiple_spaces_after_difficulty.index  dump_2021-08-20_stars_tbc.html  dump_2021-08-20_stars_tbc.index  dump_2021-12-30.html  dump_2021-12-30.index  dump_2022-03-31.html  dump_2022-03-31.index  dump_2022-06-17.html  dump_2022-06-17.index  dump_2022-08-25_valedictory_hints_and_tips.html  dump_2022-08-25_valedictory_hints_and_tips.index  dump_2022-09-16.html  dump_2022-09-16.index  dump_2022-09-19.html  dump_2022-09-19.index  dump_2022-09-20.html  dump_2022-09-20.index  dump_2022-09-21.html  dump_2022-09-21.index  dump_2022-09-22.html  dump_2022-09-22.index  (+20 more)
