[tool.poetry]
name = "bd-crossword"
version = "0.1.0"
description = "Cryptic Crossword Generator"
authors = ["chris <chris@gmail.com>"]
readme = "README.md"
# packages = [{include = "bd_crossword"}]
homepage = "https://github.com/<your-username>/bd-crossword"
repository = "https://github.com/<your-username>/bd-crossword"
keywords = ["cryptic", "crossword"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
rich = "^13.3.1"

[tool.poetry.scripts]
index-page-get = "bd_crossword.index_page.console:main"
entry-page-get = "bd_crossword.entry_page.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
beautifulsoup4 = "^4.11.1"
pyupgrade = "^3.1.0"
# jupyter = "^1.0.0"
# nb-black = "^1.0.7"
black = "^22.10.0"
flake8 = "^5.0.4"
pandas = "^1.5.2"
mypy = "^1.0.1"
types-beautifulsoup4 = "^4.11.6.7"
notebook = "^6.5.3"
jupyter-black = "^0.3.3"
pytest-html = "^3.2.0"
ansi2html = "^1.8.0"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s.%(msecs)03d [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_cli_date_format = "%M:%S"

log_level = "DEBUG"
log_format = "%(asctime)s.%(msecs)03d %(module)20s [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_date_format = "%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
# log_file_format = "%(asctime)s.%(msecs)03d %(module)s [%(filename)25s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s.%(msecs)03d [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_file_date_format = "%H:%M:%S"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bd_crossword"]

[tool.coverage.report]
show_missing = true
fail_under = 100